// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.ibm.com/mbg-agent/pkg/protocol";

package protocol;

/***** The expose service definition. *****/
service Expose {
  // Sends a expose message
  rpc ExposeCmd (ExposeRequest) returns (ExposeReply) {}
}

// The request message for exposing a service.
message ExposeRequest {
	string Id     = 2;
	string Ip     = 3;
	string Domain = 4;
	string Policy = 5;
    string mbgID  = 6;
}

// The response message for exposing a service
message ExposeReply {
  string message = 1;
}


/***** The connect service definition. *****/
service Connect {
  // Sends a connect message
  rpc ConnectCmd (ConnectRequest) returns (ConnectReply) {}
}

// The request message for connecting a service.
message ConnectRequest {
	string SourceId     = 2;
	string DestId = 4;
	//string Policy = 5;
}

// The response message for connecting a service
message ConnectReply {
  string message = 1;
}


/***** The hello service definition. *****/
service Hello {
  // Sends a Hello message
  rpc HelloCmd (HelloRequest) returns (HelloReply) {}
}

// The request message for exposing a service.
message HelloRequest {
	string Id     = 2;
	string Ip     = 3;
}

// The response message for exposing a service
message HelloReply {
  string message = 1;
}
